(library
 (name picos_stdio)
 (public_name picos.stdio)
 (root_module Deps)
 (libraries
  (re_export unix)
  (re_export picos.fd)
  picos.htbl
  picos.select))

(mdx
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries foundation picos picos.exn_bt picos.stdio picos.fifos unix)
 (files picos_stdio.mli))
