(library
 (name picos_stdio)
 (public_name picos_stdio)
 (root_module Deps)
 (libraries
  (re_export unix)
  (re_export picos_stdio_fd)
  picos.htbl
  picos_stdio.select))

(mdx
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (package picos_stdio)
 (libraries
  picos
  exn_bt
  picos.finally
  picos.randos
  picos_stdio
  picos.structured
  unix)
 (files picos_stdio.mli))
