(library
 (name picos_stdio_cohttp)
 (public_name picos.stdio.cohttp)
 (libraries
  (re_export picos.stdio)
  (re_export cohttp)
  (re_export uri)
  fmt
  picos.finally
  picos.structured))

(mdx
 (enabled_if
  (and
   (>= %{ocaml_version} 5.1.0)
   (= %{env:OPAM_REPO_CI=false} false)))
 (libraries
  cohttp
  http
  picos.finally
  picos.randos
  picos.stdio
  picos.stdio.cohttp
  picos.structured
  uri)
 (files picos_stdio_cohttp.mli))
