(rule
 (package picos_meta)
 (enabled_if %{lib-available:qcheck-stm.domain})
 (action
  (copy stm_run.ocaml5.ml stm_run.ml)))

(rule
 (package picos_meta)
 (enabled_if
  (not %{lib-available:qcheck-stm.domain}))
 (action
  (copy stm_run.ocaml4.ml stm_run.ml)))

(library
 (package picos_meta)
 (name stm_run)
 (libraries
  (re_export qcheck-core)
  (re_export qcheck-stm.stm)
  (re_export qcheck-multicoretests-util)
  qcheck-core.runner
  qcheck-stm.sequential
  qcheck-stm.thread
  unix
  (select
   empty.ml
   from
   (qcheck-stm.domain -> empty.ocaml5.ml)
   (-> empty.ocaml4.ml))))
